--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,13 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TimeReminderActivity" />
+
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true" >
@@ -53,16 +51,21 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".TimeReminderActivity"
+            android:label="@string/title_activity_time_reminder"/>
+
+        <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
+
         <activity
             android:name=".LocationReminderActivity"
-            android:label="@string/title_activity_location_reminder"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_location_reminder" />
 
         <service
             android:name=".GeofenceTransitionIntentService"
             android:exported="false" />
+
         <service
             android:name=".GeofenceService"
             android:enabled="true"
