--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.2'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
